--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 Flask==2.3.3
 Flask-Cors==4.0.0
+Flask-Session==0.5.0
+Flask-SQLAlchemy==3.1.1
 python-dotenv==1.0.0
 Werkzeug==2.3.7
 python-jose[cryptography]==3.3.0
